--- a/autoshop.html
+++ b/autoshop.html
@@ -10,7 +10,7 @@
     *{margin:0;padding:0;box-sizing:border-box}
     body{
       font-family:'Barlow','Arial',sans-serif;
-      background:linear-gradient(135deg,#2C2C2C 0%,#1A1A1A 100%);
+      background:linear-gradient(135deg,#F0E4D0 0%,#D6B489 100%);
       padding:20px;min-height:100vh;display:flex;align-items:center;justify-content:center
     }
     .shop-widget{
@@ -61,7 +61,7 @@
       box-shadow:0 2px 6px rgba(0,0,0,.15)
     }
     .settings-btn:hover{
-      background:rgba(180,138,100,.35);border-color>#B48A64;
+      background:rgba(180,138,100,.35);border-color:#B48A64;
       transform:scale(1.05) rotate(180deg);box-shadow:0 3px 10px rgba(0,0,0,.25)
     }
 
@@ -103,17 +103,17 @@
       height:180px;
       top:0;
       background:linear-gradient(180deg,
-        #2C2416 0%,
-        #3A3020 20%,
-        #453825 50%,
-        #4A3D2A 80%,
-        #524330 100%
+        #8A6542 0%,
+        #9B7248 20%,
+        #AA7F4F 50%,
+        #B98C55 80%,
+        #C7995C 100%
       );
       border-radius:180px 180px 0 0;
       box-shadow:
-        inset 0 4px 20px rgba(0,0,0,.8),
-        inset 0 -2px 10px rgba(201,168,124,.1),
-        0 -4px 20px rgba(0,0,0,.4);
+        inset 0 4px 20px rgba(0,0,0,.4),
+        inset 0 -2px 10px rgba(201,168,124,.15),
+        0 -4px 20px rgba(0,0,0,.25);
       border:3px solid #B48A64;
       border-bottom:2px solid #B48A64;
       overflow:visible;
@@ -123,8 +123,8 @@
       position:absolute;
       top:8px;left:8px;right:8px;bottom:0;
       border-radius:180px 180px 0 0;
-      background:linear-gradient(180deg,rgba(250,247,243,0.05) 0%,transparent 30%);
-      border:1px solid rgba(180,138,100,.2);
+      background:linear-gradient(180deg,rgba(250,247,243,0.08) 0%,transparent 35%);
+      border:1px solid rgba(180,138,100,.25);
       border-bottom:none;
     }
 
@@ -178,12 +178,12 @@
       left:50%;
       transform:translateX(-50%);
       font-size:10px;
-      color:#D4C4A8;
+      color:#F6E6CF;
       font-weight:600;
       text-transform:uppercase;
       letter-spacing:0.5px;
       text-shadow:0 0 8px rgba(0,0,0,.7);
-      background:rgba(44,36,22,0.7);
+      background:rgba(44,36,22,0.65);
       padding:2px 5px;
       border-radius:3px;
       white-space:nowrap;
@@ -223,8 +223,8 @@
       left:50%;
       transform:translateX(-50%);
       z-index:15;
-      box-shadow:0 0 0 3px #3A3020,0 3px 10px rgba(0,0,0,.5);
-      border:1px solid #D4C4A8;
+      box-shadow:0 0 0 3px #7A5737,0 3px 10px rgba(0,0,0,.5);
+      border:1px solid #F6E6CF;
     }
 
     /* mechanic helper conversions inside the dial */
@@ -248,11 +248,11 @@
       font-size:8px;
       letter-spacing:1px;
       text-transform:uppercase;
-      color:#C9A87C;
+      color:#F6E0BA;
     }
     .metric-value{
       font-size:9px;
-      color:#F7E3C0;
+      color:#FFF4DB;
       white-space:nowrap;
     }
 
